# Computation

./: CMakeLists.txt  README.md  algorit.h  headerComput.h  main.c  pointer.c  pointerH.h
